--- a/MyFirstShowcase/.gitignore
+++ b/MyFirstShowcase/.gitignore
@@ -79,3 +79,5 @@ Content/FirstPersonArms
 Content/FPWeapon
 Content/JapaneseSchool
 Content/LevelPrototyping
+Content/__ExternalActors__
+Content/__ExternalObjects__
